// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View should call useRefresh on update 1`] = `
Array [
  Array [
    [Function],
    0,
    Array [],
    Array [
      "POLL_ADD_OPTION",
      "POLL_CAST_VOTE",
      "POLL_REMOVE_OPTION",
      "POLL_REMOVE_VOTE",
      "POLL_TOGGLE_FLAG",
      "POLL_TOGGLE_HIDE",
      "POLL_TOGGLE_SECRET",
    ],
  ],
  Array [
    [Function],
    0,
    Array [],
    Array [
      "POLL_ADD_OPTION",
      "POLL_CAST_VOTE",
      "POLL_REMOVE_OPTION",
      "POLL_REMOVE_VOTE",
      "POLL_TOGGLE_FLAG",
      "POLL_TOGGLE_HIDE",
      "POLL_TOGGLE_SECRET",
    ],
  ],
]
`;

exports[`View should match snapshot (default) 1`] = `
<Fragment>
  <ViewMenu
    actions={
      Object {
        "formAddOption": [MockFunction],
        "formCheckTitle": [MockFunction],
        "formClearState": [MockFunction],
        "formRemoveOption": [MockFunction],
        "formSetAdd": [MockFunction],
        "formSetTitle": [MockFunction],
        "formToggleDelete": [MockFunction],
        "formToggleSecret": [MockFunction],
        "listClearState": [MockFunction],
        "listSetSearch": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaCreatePoll": [MockFunction],
        "metaDeletePoll": [MockFunction],
        "metaGetPollItem": [MockFunction],
        "metaGetPollList": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "pollAddOption": [MockFunction],
        "pollCastVote": [MockFunction],
        "pollRemoveOption": [MockFunction],
        "pollRemoveVote": [MockFunction],
        "pollToggleFlag": [MockFunction],
        "pollToggleHide": [MockFunction],
        "pollToggleSecret": [MockFunction],
        "viewClearState": [MockFunction],
        "viewSetAdd": [MockFunction],
        "viewToggleDelete": [MockFunction],
        "viewToggleSettings": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "delete": false,
        },
        "errors": Array [],
        "form": Object {
          "add": "",
          "delete": false,
          "options": Array [],
          "secret": false,
          "title": "",
        },
        "list": Object {
          "search": "",
        },
        "loading": 0,
        "log": Array [],
        "polls": Array [],
        "user": Object {},
        "view": Object {
          "add": "",
          "delete": false,
          "settings": false,
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "poll": Object {
          "author": "",
          "date": 0,
          "id": "",
          "options": Array [],
          "secret": false,
          "title": "",
          "users": Object {
            "created": "",
            "flagged": Array [],
            "hidden": Array [],
          },
          "votes": 0,
        },
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <Poll
    actions={
      Object {
        "formAddOption": [MockFunction],
        "formCheckTitle": [MockFunction],
        "formClearState": [MockFunction],
        "formRemoveOption": [MockFunction],
        "formSetAdd": [MockFunction],
        "formSetTitle": [MockFunction],
        "formToggleDelete": [MockFunction],
        "formToggleSecret": [MockFunction],
        "listClearState": [MockFunction],
        "listSetSearch": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaCreatePoll": [MockFunction],
        "metaDeletePoll": [MockFunction],
        "metaGetPollItem": [MockFunction],
        "metaGetPollList": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "pollAddOption": [MockFunction],
        "pollCastVote": [MockFunction],
        "pollRemoveOption": [MockFunction],
        "pollRemoveVote": [MockFunction],
        "pollToggleFlag": [MockFunction],
        "pollToggleHide": [MockFunction],
        "pollToggleSecret": [MockFunction],
        "viewClearState": [MockFunction],
        "viewSetAdd": [MockFunction],
        "viewToggleDelete": [MockFunction],
        "viewToggleSettings": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "delete": false,
        },
        "errors": Array [],
        "form": Object {
          "add": "",
          "delete": false,
          "options": Array [],
          "secret": false,
          "title": "",
        },
        "list": Object {
          "search": "",
        },
        "loading": 0,
        "log": Array [],
        "polls": Array [],
        "user": Object {},
        "view": Object {
          "add": "",
          "delete": false,
          "settings": false,
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "poll": Object {
          "author": "",
          "date": 0,
          "id": "",
          "options": Array [],
          "secret": false,
          "title": "",
          "users": Object {
            "created": "",
            "flagged": Array [],
            "hidden": Array [],
          },
          "votes": 0,
        },
        "role": "view",
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
</Fragment>
`;

exports[`View should match snapshot (id) 1`] = `
<Fragment>
  <ViewMenu
    actions={
      Object {
        "formAddOption": [MockFunction],
        "formCheckTitle": [MockFunction],
        "formClearState": [MockFunction],
        "formRemoveOption": [MockFunction],
        "formSetAdd": [MockFunction],
        "formSetTitle": [MockFunction],
        "formToggleDelete": [MockFunction],
        "formToggleSecret": [MockFunction],
        "listClearState": [MockFunction],
        "listSetSearch": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaCreatePoll": [MockFunction],
        "metaDeletePoll": [MockFunction],
        "metaGetPollItem": [MockFunction],
        "metaGetPollList": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "pollAddOption": [MockFunction],
        "pollCastVote": [MockFunction],
        "pollRemoveOption": [MockFunction],
        "pollRemoveVote": [MockFunction],
        "pollToggleFlag": [MockFunction],
        "pollToggleHide": [MockFunction],
        "pollToggleSecret": [MockFunction],
        "viewClearState": [MockFunction],
        "viewSetAdd": [MockFunction],
        "viewToggleDelete": [MockFunction],
        "viewToggleSettings": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "delete": false,
        },
        "errors": Array [],
        "form": Object {
          "add": "",
          "delete": false,
          "options": Array [],
          "secret": false,
          "title": "",
        },
        "list": Object {
          "search": "",
        },
        "loading": 0,
        "log": Array [],
        "polls": Array [
          Object {
            "author": "",
            "date": 0,
            "id": "id-a",
            "options": Array [],
            "secret": false,
            "title": "",
            "users": Object {
              "created": "",
              "flagged": Array [],
              "hidden": Array [],
            },
            "votes": 0,
          },
        ],
        "user": Object {},
        "view": Object {
          "add": "",
          "delete": false,
          "settings": false,
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "poll": Object {
          "author": "",
          "date": 0,
          "id": "id-a",
          "options": Array [],
          "secret": false,
          "title": "",
          "users": Object {
            "created": "",
            "flagged": Array [],
            "hidden": Array [],
          },
          "votes": 0,
        },
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <Poll
    actions={
      Object {
        "formAddOption": [MockFunction],
        "formCheckTitle": [MockFunction],
        "formClearState": [MockFunction],
        "formRemoveOption": [MockFunction],
        "formSetAdd": [MockFunction],
        "formSetTitle": [MockFunction],
        "formToggleDelete": [MockFunction],
        "formToggleSecret": [MockFunction],
        "listClearState": [MockFunction],
        "listSetSearch": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaCreatePoll": [MockFunction],
        "metaDeletePoll": [MockFunction],
        "metaGetPollItem": [MockFunction],
        "metaGetPollList": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "pollAddOption": [MockFunction],
        "pollCastVote": [MockFunction],
        "pollRemoveOption": [MockFunction],
        "pollRemoveVote": [MockFunction],
        "pollToggleFlag": [MockFunction],
        "pollToggleHide": [MockFunction],
        "pollToggleSecret": [MockFunction],
        "viewClearState": [MockFunction],
        "viewSetAdd": [MockFunction],
        "viewToggleDelete": [MockFunction],
        "viewToggleSettings": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "delete": false,
        },
        "errors": Array [],
        "form": Object {
          "add": "",
          "delete": false,
          "options": Array [],
          "secret": false,
          "title": "",
        },
        "list": Object {
          "search": "",
        },
        "loading": 0,
        "log": Array [],
        "polls": Array [
          Object {
            "author": "",
            "date": 0,
            "id": "id-a",
            "options": Array [],
            "secret": false,
            "title": "",
            "users": Object {
              "created": "",
              "flagged": Array [],
              "hidden": Array [],
            },
            "votes": 0,
          },
        ],
        "user": Object {},
        "view": Object {
          "add": "",
          "delete": false,
          "settings": false,
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "poll": Object {
          "author": "",
          "date": 0,
          "id": "id-a",
          "options": Array [],
          "secret": false,
          "title": "",
          "users": Object {
            "created": "",
            "flagged": Array [],
            "hidden": Array [],
          },
          "votes": 0,
        },
        "role": "view",
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
</Fragment>
`;
